--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@
 	src: url("/Fonts/Gilroy-Regular.ttf") format("truetype");
 }
 @font-face {
+	font-family: "GilroyBold";
+	src: url("/Fonts/Gilroy-Bold.ttf") format("truetype");
+}
+@font-face {
+	font-family: "GilroyExtraBold";
+	src: url("/Fonts/Gilroy-ExtraBold.ttf") format("truetype");
+}
+@font-face {
 	font-family: "GilroyLight";
 	src: url("/Fonts/Gilroy-Light.ttf") format("truetype");
 }
@@ -21,12 +29,12 @@
 
 	--unnamed-color-df280b: #df280b;
 	--unnamed-color-ffffff: #ffffff;
-	/* --unnamed-color-0072bb: #0072bb; */
-	--main-color: #0072bb;
+	--unnamed-color-0072bb: #0072bb;
 	--unnamed-color-df270a: #df270a;
 	/* --unnamed-color-707070: #707070; */
 	--border-color: #707070;
-	--unnamed-color-00a8f0: #00a8f0;
+	/* --unnamed-color-00a8f0: #00a8f0; */
+	--main-color: #00a8f0;
 	--unnamed-color-000000: #000000;
 }
 
@@ -34,15 +42,116 @@ body {
 	font-family: "Gilroy", sans-serif;
 }
 
+ul {
+	list-style: none;
+}
+
 .container {
-	width: 1700px;
+	width: 1650px;
 	margin: 0 auto;
+}
+
+.btn {
+	padding: 0;
+	border: none;
+	background-color: transparent;
+}
+
+/* CIRCLES */
+
+.circle {
+	position: absolute;
+	width: 376px;
+	height: 376px;
+	border-radius: 50%;
+	background-image: url("data:image/svg+xml,%3csvg width='376' height='376' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='50%25' ry='50%25' stroke='white' stroke-width='5' stroke-dasharray='10, 10' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+	background-size: 100% 100%;
+}
+
+.white-circle {
+	/* border: 3px dashed #ffffff; */
+}
+
+.header__cirlce-top-black {
+	background-image: url("data:image/svg+xml,%3csvg width='640' height='640' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='50%25' ry='50%25' stroke='black' stroke-width='5' stroke-dasharray='5,10' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
+}
+
+/* SIGNS */
+
+.signs {
+	position: absolute;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+}
+
+.sign__icon {
+	width: 60px;
+	opacity: 0.1;
+}
+
+/* SIGNS TOP LEFT */
+.header__center__signs-left {
+	top: 5px;
+	left: 15px;
+}
+
+.sum {
+	grid-column: 2/3;
+	grid-row: 2/3;
+}
+
+.subtraction {
+	grid-column: 3/4;
+	grid-row: 1/2;
+}
+
+.multiplication {
+	grid-column: 1/2;
+	grid-row: 3/4;
+}
+
+.divide {
+	grid-column: 3/4;
+	grid-row: 3/4;
+}
+
+/* SIGNS TOP RIGHT */
+.header__center__signs-right {
+	top: 0;
+	right: -45px;
+}
+.header__center__signs-right .sign__icon {
+	width: 50px;
+}
+
+.header__center__signs-right .subtraction {
+	grid-column: 3/4;
+	grid-row: 3/4;
+}
+
+.header__center__signs-right .multiplication {
+	grid-column: 3/4;
+	grid-row: 1/2;
+}
+
+.header__center__signs-right .divide {
+	grid-column: 1/1;
+	grid-row: 1/1;
+}
+
+/* SIGNS RIGHT BOTTOM */
+.header__center__signs-right-bottm {
+	top: 760px;
+	left: 1080px;
+}
+.header__center__signs-right-bottm .sign__icon {
+	width: 45px;
 }
 
 .header__wrapper {
 	position: relative;
 	height: 2200px;
-	padding-top: 50px;
 	overflow: hidden;
 }
 
@@ -59,10 +168,48 @@ body {
 	z-index: -1;
 }
 
+.header__cirlce-top {
+	top: -64px;
+	left: 1502px;
+}
+.header__cirlce-mid {
+	top: 787px;
+	left: 1166px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	z-index: 2;
+}
+
+.header__cirlce-mid__text {
+	font-family: GilroyExtraBold, serif;
+	font-size: 6.5rem;
+	text-align: center;
+}
+
+.header__cirlce-top-black {
+	top: 212px;
+	left: 330px;
+	width: 640px;
+	height: 640px;
+	z-index: 2;
+}
+
 /* NAVIGATION */
 
 .header__burger {
 	display: none;
+}
+.header__nav {
+	height: 183px;
+	display: flex;
+	align-items: center;
+}
+
+.header__nav__wrapper {
+	width: 100%;
 }
 
 .header__nav__content {
@@ -74,7 +221,7 @@ body {
 .header__nav__list {
 	display: flex;
 	justify-content: flex-start;
-	list-style: none;
+	margin-left: -3.4rem;
 }
 
 .header__nav__link,
@@ -126,8 +273,9 @@ body {
 	padding: 0 1.5rem;
 	transform: translateY(0) translateX(-50%);
 	border-radius: 9px;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 0.4);
 	backdrop-filter: blur(30px);
+	z-index: 3;
 	animation: dropdown 0.3s forwards;
 }
 
@@ -210,6 +358,202 @@ body {
 .header__nav__search-icon {
 	display: block;
 	width: 3rem;
+}
+
+/* HEADER CONTENT */
+/* CENTER CONTENT */
+
+.header__content {
+	display: flex;
+	justify-content: space-between;
+}
+
+.header__center {
+	position: absolute;
+	top: 183px;
+	left: 418px;
+	width: 1084px;
+	height: 1084px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.header__center-bg {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 1084px;
+	height: 1084px;
+	transform: translate(-50%, -50%);
+	background-color: var(--main-color);
+	border-radius: 50%;
+	z-index: 1;
+}
+
+.header__center__img {
+	position: relative;
+}
+
+.header__center__img-photo {
+	display: block;
+	position: absolute;
+	top: 80px;
+	left: -100px;
+	transform: rotate(19deg) scale(1.8);
+	width: 806px;
+	z-index: 2;
+}
+
+.header__center__content {
+	display: flex;
+	flex-direction: column;
+	width: 575px;
+	margin-top: 113px;
+	z-index: 1;
+}
+
+.header__center__heading {
+	font-size: 8rem;
+	font-family: "GilroyExtraBold";
+}
+
+.header__center__link {
+	position: relative;
+	width: 386px;
+	margin: 40px auto 0 auto;
+	font-size: 4.5rem;
+	font-family: "GilroyExtraBold";
+	color: #fff;
+	text-decoration: none;
+	text-align: center;
+	text-transform: uppercase;
+}
+
+.header__center__link-first::after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 314px;
+	height: 4px;
+	background-color: #fff;
+	opacity: 0;
+	transition: opacity 0.3s;
+}
+.header__center__link-first:hover::after {
+	opacity: 1;
+}
+
+/* BUTTONS HEADER */
+
+.header_button {
+	position: absolute;
+	top: 380px;
+	width: 70px;
+	height: 70px;
+	transition: background-image 0.2s linear;
+	z-index: 2;
+}
+
+.header_button--left {
+	background-image: url("/img/alo.png");
+	left: -20px;
+}
+
+.header_button--left:hover {
+	background-image: url("/img/alm.png");
+}
+
+.header_button--right {
+	background-image: url("/img/alj.png");
+	right: -20px;
+}
+
+.header_button--right:hover {
+	background-image: url("/img/alh.png");
+}
+
+/* LEFT CONTENT IN HEADER*/
+
+.header__left-heading {
+	margin-top: 145px;
+	font-size: 3.3rem;
+	font-family: GilroyExtraBold, sans-serif;
+	text-transform: uppercase;
+}
+
+.header__left-text {
+	position: relative;
+	font-size: 3.3rem;
+	font-family: Gilroy, sans-serif;
+	text-transform: uppercase;
+	color: #000;
+	text-decoration: none;
+	background-color: var(--backgound-color);
+	z-index: 2;
+}
+
+.header__left__socials-list {
+	margin-top: 3.3rem;
+}
+
+.header__left__social-link {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 45px;
+	height: 45px;
+	margin: 1rem 0;
+	background-color: #000;
+	border-radius: 50%;
+	text-decoration: none;
+}
+
+.header__left__social-icon {
+	font-size: 2.7rem;
+	color: var(--backgound-color);
+}
+
+/* RIGHT CONTENT IN HEADER */
+
+.header__right-heading {
+	margin-top: 181px;
+	margin-bottom: 52px;
+	font-size: 4.5rem;
+	font-family: GilroyExtraBold, sans-serif;
+	text-transform: uppercase;
+}
+
+.header__right__flag-link {
+	display: block;
+	margin: 1.5rem 0 1.5rem auto;
+	width: 45px;
+	height: 30px;
+	background-image: url("./img/ukraine.png");
+}
+
+.flag-link--active {
+	position: relative;
+}
+
+.header__right__flag-link:nth-of-type(2) {
+	background-image: url("./img/union-jack.png");
+}
+
+.header__right__flag-link:nth-of-type(3) {
+	background-image: url("./img/poland.png");
+}
+
+.flag-link--active::after {
+	content: "";
+	width: 40px;
+	height: 2px;
+	position: absolute;
+	top: 120%;
+	left: 50%;
+	transform: translateX(-50%);
+	background-color: #000;
 }
 
 /* MAIN */
