--- a/style.css
+++ b/style.css
@@ -24,18 +24,9 @@
 :root {
 	font-size: 10px;
 
-	/* Colors: */
 	--backgound-color: #c4ecfc;
-
-	--unnamed-color-df280b: #df280b;
-	--unnamed-color-ffffff: #ffffff;
-	--unnamed-color-0072bb: #0072bb;
-	--unnamed-color-df270a: #df270a;
-	/* --unnamed-color-707070: #707070; */
 	--border-color: #707070;
-	/* --unnamed-color-00a8f0: #00a8f0; */
 	--main-color: #00a8f0;
-	--unnamed-color-000000: #000000;
 }
 
 body {
@@ -51,6 +42,8 @@ ul {
 	width: 1650px;
 	margin: 0 auto;
 }
+
+/* BUTTONS */
 
 .btn {
 	padding: 0;
@@ -77,6 +70,28 @@ ul {
 }
 .arrow-right:hover {
 	background-image: url("/img/alh.png");
+}
+
+.bg-right {
+	position: absolute;
+	top: 2662px;
+	left: 0;
+	width: 2390px;
+	height: 2471px;
+	background-color: var(--backgound-color);
+	clip-path: circle(50% at 96% 50%);
+}
+
+.bg-right-second {
+	position: absolute;
+	width: 1400px;
+	height: 1565px;
+	top: 3483px;
+	left: 1145px;
+	/* right: 0; */
+	border-radius: 47%;
+	clip-path: none;
+	background-color: var(--backgound-color);
 }
 
 /* CIRCLES */
@@ -302,21 +317,6 @@ ul {
 	animation: dropdown 0.3s forwards;
 }
 
-/* TRIANGLE TOP */
-
-/* .dropdown-list::before {
-	content: "";
-	position: absolute;
-	top: -15px;
-	left: 50%;
-	transform: translateX(-50%);
-	height: 10px;
-	width: 10px;
-	background-color: rgba(255, 255, 255, 0.5);
-	border-radius: 50%;
-	z-index: 3;
-} */
-
 .dropdown-list::after {
 	content: "";
 	position: absolute;
@@ -328,17 +328,6 @@ ul {
 	border-bottom: 15px solid rgba(255, 255, 255, 0.5);
 	backdrop-filter: blur(30px);
 }
-
-/* .triangle-top {
-	position: absolute;
-	top: -20px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 8px;
-	height: 7px;
-	background-color: var(--backgound-color);
-	z-index: 2;
-} */
 
 .logo {
 	display: block;
@@ -566,6 +555,10 @@ ul {
 
 main {
 	min-height: 100vh;
+}
+
+footer {
+	min-height: 150vh;
 }
 
 /* ANIMATIONS */
