--- a/style.css
+++ b/style.css
@@ -552,13 +552,330 @@ ul {
 }
 
 /* MAIN */
-
-main {
-	min-height: 100vh;
+.main {
+	display: flex;
+	gap: 200px;
+	margin-top: -780px;
 }
 
-footer {
-	min-height: 150vh;
+/* ASIDE */
+.main__aside {
+	position: relative;
+	width: 390px;
+}
+
+.aside__heading {
+	position: relative;
+	font-size: 3rem;
+	text-transform: uppercase;
+	font-family: "GilroyExtraBold", serif;
+}
+
+.aside__heading::after {
+	content: "";
+	position: absolute;
+	top: 110%;
+	left: -130px;
+	height: 5px;
+	width: 530px;
+	background-color: #000;
+}
+
+.main__aside__list {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
+}
+
+.main__aside__list__element {
+	margin: 16px 0;
+}
+
+.main__aside__list__link {
+	font-size: 2rem;
+	font-family: GilroyLight, sans-serif;
+	text-decoration: none;
+	color: #000;
+}
+
+/* SIGNS IN ASIDE */
+.main__sings .sign__icon {
+	width: 193px;
+}
+
+.main__aside__signs-top {
+	top: -325px;
+	left: -400px;
+}
+
+.main__aside__signs-mid {
+	top: 1255px;
+	left: -0;
+}
+
+.main__aside__signs-mid .subtraction {
+	grid-column: 3/4;
+	grid-row: 3/4;
+}
+
+.main__aside__signs-mid .multiplication {
+	grid-column: 3/4;
+	grid-row: 1/2;
+	transform: rotate(180deg);
+}
+
+.main__aside__signs-mid .divide {
+	grid-column: 1/2;
+	grid-row: 1/2;
+}
+
+.main__aside__signs-bottom {
+	bottom: 0;
+	left: -245px;
+}
+
+/* CIRCLES IN ASIDE */
+
+.main__aside__circle-black {
+	left: -325px;
+	top: 1480px;
+}
+
+.main__aside__circle-blue-bg {
+	left: -70px;
+	top: 1720px;
+	width: 492px;
+	height: 492px;
+	z-index: -1;
+}
+
+/* MAIN CONTENT */
+/* PROMOTIONS */
+
+.main__content {
+	position: relative;
+	width: 810px;
+	z-index: 1;
+}
+
+.main__heading {
+	margin-top: 1rem;
+	margin-bottom: 4.5rem;
+	font-size: 4.5rem;
+	font-family: GilroyExtraBold, sans-serif;
+	color: #fff;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+.main__content__promotions-box {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+}
+
+/* PRODUCTS */
+.main__content__products-box {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	row-gap: 5.2rem;
+}
+
+/* BUTTONS CARDS CHANGE */
+.main__content__promotions-btn--right,
+.main__content__promotions-btn--left {
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+.main__content__promotions-btn--left {
+	left: -13%;
+}
+
+.main__content__promotions-btn--right {
+	right: -13%;
+}
+
+.main__content__products {
+	margin-top: 5rem;
+}
+
+/* CARDS */
+.card {
+	position: relative;
+	display: block;
+	width: 240px;
+	height: 331px;
+	padding: 2.8rem;
+	background-color: #fff;
+	border-radius: 9px;
+	color: #000;
+	font-family: GilroyExtraBold, sans-serif;
+	text-decoration: none;
+	box-shadow: 0px 0px 10px #00000021;
+	cursor: pointer;
+}
+
+.card__heading {
+	max-width: 150px;
+	margin: 0 auto;
+	font-size: 2rem;
+	text-align: center;
+}
+
+.card__img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.card__price {
+	position: absolute;
+	right: -23px;
+	bottom: 23px;
+	width: 100px;
+	height: 100px;
+	padding: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	font-size: 2rem;
+	text-align: center;
+	background-color: var(--main-color);
+	border-radius: 50%;
+}
+
+.card__icon {
+	position: absolute;
+	bottom: -23px;
+	right: -40px;
+}
+
+/* SIGNS IN MAIN */
+/* TOP RIGHT IN MAIN */
+
+.main__content__signs--top-right {
+	top: 290px;
+	right: -480px;
+}
+
+/* CIRCLES IN MAIN */
+
+.main__content__circle-black {
+	width: 374px;
+	height: 374px;
+	top: 1140px;
+	right: -230px;
+}
+
+/* CONTACT */
+.section__contact {
+	margin-top: -25px;
+}
+
+.section__heading {
+	position: relative;
+	font-size: 4.5rem;
+	font-family: GilroyExtraBoldrif, sans-serif;
+	text-transform: uppercase;
+}
+
+.section__heading::after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: -127px;
+	width: 1413px;
+	height: 5px;
+	background-color: #000;
+	z-index: 1;
+}
+
+.section__contact__map {
+	position: relative;
+	display: flex;
+	margin-top: 5px;
+}
+
+.section__contact__logo-esc {
+	position: absolute;
+	width: 218px;
+	height: 218px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	border-radius: 50%;
+	background-color: rgba(255, 255, 255, 0.71);
+	backdrop-filter: blur(9px);
+	-webkit-backdrop-filter: blur(9px);
+}
+
+.section__contact__logo-esc-img {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* CONTACT DATA */
+
+.section__contact__data {
+	display: flex;
+	justify-content: space-between;
+	margin: 2rem auto;
+}
+
+.section__contact__list {
+	font-family: GilroyLight, sans-serif;
+}
+.section__contact__list-item {
+	position: relative;
+	font-size: 2rem;
+	margin: 0 0 3rem 6rem;
+}
+
+.section__contact__list-item:before {
+	position: absolute;
+	top: 50%;
+	left: -60px;
+	transform: translateY(-50%);
+	width: 45px;
+}
+
+.section__contact__list-item:nth-child(1):before {
+	content: url("/img/and.png");
+}
+.section__contact__list-item:nth-child(2):before {
+	content: url("/img/amg.png");
+}
+.section__contact__list-item:nth-child(3):before {
+	content: url("/img/ana.png");
+}
+
+.section__contact__phone {
+	display: block;
+	text-decoration: none;
+	color: #000;
+}
+
+.section__contact__open-time {
+	font-size: 1.5rem;
+}
+
+.section__contact__list--right {
+	text-align: right;
+}
+.section__contact__list--right .section__contact__list-item:before {
+	left: auto;
+	right: -60px;
+}
+
+.section__contact__list--right .section__contact__list-item {
+	position: relative;
+	font-size: 2rem;
+	margin: 0 6rem 3rem 0;
 }
 
 /* ANIMATIONS */
