--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ ul {
 	height: 2471px;
 	background-color: var(--backgound-color);
 	clip-path: circle(50% at 96% 50%);
+	z-index: -1;
 }
 
 .bg-right-second {
@@ -88,10 +89,10 @@ ul {
 	height: 1565px;
 	top: 3483px;
 	left: 1145px;
-	/* right: 0; */
 	border-radius: 47%;
 	clip-path: none;
 	background-color: var(--backgound-color);
+	z-index: -1;
 }
 
 /* CIRCLES */
@@ -824,7 +825,7 @@ ul {
 .section__contact__data {
 	display: flex;
 	justify-content: space-between;
-	margin: 2rem auto;
+	margin: 2rem auto 0 auto;
 }
 
 .section__contact__list {
