--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ ul {
 	top: 2662px;
 	left: 0;
 	width: 2390px;
-	height: 2471px;
+	height: 2300px;
 	background-color: var(--backgound-color);
 	clip-path: circle(50% at 96% 50%);
 	z-index: -1;
@@ -86,7 +86,7 @@ ul {
 .bg-right-second {
 	position: absolute;
 	width: 1400px;
-	height: 1565px;
+	height: 1460px;
 	top: 3483px;
 	left: 1145px;
 	border-radius: 47%;
@@ -762,6 +762,21 @@ ul {
 	right: -480px;
 }
 
+/* MID RIGHT IN MAIN */
+.main__content__signs--mid-right {
+	top: 1550px;
+	right: -490px;
+}
+
+.main__content__signs--mid-right .sum {
+	grid-column: 3 / 4;
+	grid-row: 3 / 4;
+}
+.main__content__signs--mid-right .divide {
+	grid-column: 2 / 3;
+	grid-row: 2 / 3;
+}
+
 /* CIRCLES IN MAIN */
 
 .main__content__circle-black {
@@ -877,6 +892,14 @@ ul {
 	position: relative;
 	font-size: 2rem;
 	margin: 0 6rem 3rem 0;
+}
+
+.section__contact__circle-black {
+	width: 368px;
+	height: 368px;
+	top: -185px;
+	right: -110px;
+	z-index: -1;
 }
 
 /* ANIMATIONS */
