--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 	box-sizing: border-box;
 }
 
+/* ------------------------------------------------------------------------ */
+/* FONTS */
+
 @font-face {
 	font-family: "Gilroy";
 	src: url("/Fonts/Gilroy-Regular.ttf") format("truetype");
@@ -23,24 +26,50 @@
 
 :root {
 	font-size: 10px;
-
-	--backgound-color: #c4ecfc;
+	--background-color: #c4ecfc;
 	--border-color: #707070;
 	--main-color: #00a8f0;
 }
+
+/* ------------------------------------------------------------------------ */
+/* GLOBAL STYLES */
 
 body {
 	font-family: "Gilroy", sans-serif;
 	overflow-x: hidden;
 }
 
+.container {
+	width: 1650px;
+	margin: 0 auto;
+}
+
 ul {
 	list-style: none;
 }
 
-.container {
-	width: 1650px;
-	margin: 0 auto;
+a {
+	font-family: GilroyLight, sans-serif;
+	text-decoration: none;
+	color: #000;
+}
+
+.absoluteCenter {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.flexCenter {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.headingBasic {
+	font-family: "GilroyExtraBold", serif;
+	text-transform: uppercase;
 }
 
 /* BUTTONS */
@@ -72,27 +101,28 @@ ul {
 	background-image: url("/img/alh.png");
 }
 
-.bg-right {
+/* BACKGROUNDS */
+
+.bg-right,
+.bg-right-second {
 	position: absolute;
+	background-color: var(--background-color);
+	z-index: -1;
+}
+.bg-right {
 	top: 2662px;
 	left: 0;
 	width: 2390px;
 	height: 2300px;
-	background-color: var(--backgound-color);
 	clip-path: circle(50% at 96% 50%);
-	z-index: -1;
 }
 
 .bg-right-second {
-	position: absolute;
 	width: 1400px;
 	height: 1460px;
 	top: 3483px;
 	left: 1145px;
 	border-radius: 47%;
-	clip-path: none;
-	background-color: var(--backgound-color);
-	z-index: -1;
 }
 
 /* NUMBERS */
@@ -137,11 +167,16 @@ ul {
 
 /* CIRCLES */
 
-.circle {
+.circle,
+.circle-black,
+.circle-blue-bg {
 	position: absolute;
+	border-radius: 50%;
+}
+
+.circle {
 	width: 376px;
 	height: 376px;
-	border-radius: 50%;
 	background-image: url("data:image/svg+xml,%3csvg width='376' height='376' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='50%25' ry='50%25' stroke='white' stroke-width='5' stroke-dasharray='10, 10' stroke-dashoffset='0' stroke-linecap='butt'/%3e%3c/svg%3e");
 	background-size: 100% 100%;
 }
@@ -153,9 +188,7 @@ ul {
 }
 
 .circle-blue-bg {
-	position: absolute;
 	background-color: var(--main-color);
-	border-radius: 50%;
 }
 
 /* SIGNS */
@@ -170,12 +203,6 @@ ul {
 .sign__icon {
 	width: 60px;
 	opacity: 0.1;
-}
-
-/* SIGNS TOP LEFT */
-.header__center__signs-left {
-	top: 5px;
-	left: 15px;
 }
 
 .sum {
@@ -198,7 +225,13 @@ ul {
 	grid-row: 3/4;
 }
 
-/* SIGNS TOP RIGHT */
+/* SIGNS HEADER TOP LEFT */
+.header__center__signs-left {
+	top: 5px;
+	left: 15px;
+}
+
+/* SIGNS HEADER TOP RIGHT */
 .header__center__signs-right {
 	top: 0;
 	right: -45px;
@@ -222,7 +255,7 @@ ul {
 	grid-row: 1/1;
 }
 
-/* SIGNS RIGHT BOTTOM */
+/* SIGNS HEADER BOTTOM RIGHT */
 .header__center__signs-right-bottm {
 	top: 760px;
 	left: 1080px;
@@ -231,6 +264,7 @@ ul {
 	width: 45px;
 }
 
+/* ------------------------------------------------------------------------ */
 /* HEADER */
 
 .header__wrapper {
@@ -240,6 +274,7 @@ ul {
 }
 
 .header__wrapper::after {
+	/* ŚRODEK X */
 	content: "";
 	position: absolute;
 	top: -309px;
@@ -247,7 +282,7 @@ ul {
 	transform: translateX(-50%);
 	width: 2105px;
 	height: 2200px;
-	background: var(--backgound-color);
+	background: var(--background-color);
 	border-radius: 0 0 50% 50%;
 	z-index: -1;
 }
@@ -259,9 +294,12 @@ ul {
 .header__circle-mid {
 	top: 787px;
 	left: 1166px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	z-index: 2;
+}
+
+.header__circle-top-black {
+	top: 212px;
+	left: 330px;
 	z-index: 2;
 }
 
@@ -271,17 +309,9 @@ ul {
 	text-align: center;
 }
 
-.header__circle-top-black {
-	top: 212px;
-	left: 330px;
-	z-index: 2;
-}
-
+/* ------------------------------------------------------------------------ */
 /* NAVIGATION */
 
-.header__burger {
-	display: none;
-}
 .header__nav {
 	height: 183px;
 	display: flex;
@@ -290,6 +320,10 @@ ul {
 
 .header__nav__wrapper {
 	width: 100%;
+}
+
+.header__burger {
+	display: none;
 }
 
 .header__nav__content {
@@ -306,13 +340,9 @@ ul {
 
 .header__nav__link,
 .header__nav__link-dropdown {
-	min-width: max-content;
 	padding: 0 3.4rem;
 	font-size: 3rem;
 	font-weight: 300;
-	color: #000;
-	text-decoration: none;
-	font-family: GilroyLight;
 }
 
 .header__nav__link {
@@ -326,12 +356,13 @@ ul {
 
 .header__nav__link-dropdown {
 	display: block;
+	min-width: max-content;
 	padding: 0.5rem 0;
 	font-size: 2rem;
 	text-align: center;
 }
 
-/* DROPDOWN NAVIGATION */
+/* DROPDOWN LIST */
 
 .element-dropdown {
 	position: relative;
@@ -370,6 +401,8 @@ ul {
 	border-bottom: 15px solid rgba(255, 255, 255, 0.5);
 	backdrop-filter: blur(30px);
 }
+
+/* LOGO IN NAVIGATION */
 
 .logo {
 	display: block;
@@ -415,7 +448,7 @@ ul {
 }
 
 /* HEADER CONTENT */
-/* CENTER CONTENT */
+/* CENTER  */
 
 .header__content {
 	display: flex;
@@ -433,11 +466,8 @@ ul {
 }
 
 .header__center-bg {
-	top: 50%;
-	left: 50%;
 	width: 1084px;
 	height: 1084px;
-	transform: translate(-50%, -50%);
 	z-index: 1;
 }
 
@@ -447,11 +477,11 @@ ul {
 
 .header__center__img-photo {
 	display: block;
+	width: 806px;
 	position: absolute;
 	top: 80px;
 	left: -100px;
 	transform: rotate(19deg) scale(1.8);
-	width: 806px;
 	z-index: 2;
 }
 
@@ -475,7 +505,6 @@ ul {
 	font-size: 4.5rem;
 	font-family: "GilroyExtraBold";
 	color: #fff;
-	text-decoration: none;
 	text-align: center;
 	text-transform: uppercase;
 }
@@ -516,8 +545,6 @@ ul {
 .header__left-heading {
 	margin-top: 145px;
 	font-size: 3.3rem;
-	font-family: GilroyExtraBold, sans-serif;
-	text-transform: uppercase;
 }
 
 .header__left-text {
@@ -527,7 +554,7 @@ ul {
 	text-transform: uppercase;
 	color: #000;
 	text-decoration: none;
-	background-color: var(--backgound-color);
+	background-color: var(--background-color);
 	z-index: 2;
 }
 
@@ -536,20 +563,16 @@ ul {
 }
 
 .header__left__social-link {
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	width: 45px;
 	height: 45px;
 	margin: 1rem 0;
 	background-color: #000;
 	border-radius: 50%;
-	text-decoration: none;
 }
 
 .header__left__social-icon {
 	font-size: 2.7rem;
-	color: var(--backgound-color);
+	color: var(--background-color);
 }
 
 /* RIGHT CONTENT IN HEADER */
@@ -558,8 +581,6 @@ ul {
 	margin-top: 181px;
 	margin-bottom: 52px;
 	font-size: 4.5rem;
-	font-family: GilroyExtraBold, sans-serif;
-	text-transform: uppercase;
 }
 
 .header__right__flag-link {
@@ -593,14 +614,18 @@ ul {
 	background-color: #000;
 }
 
+/* ------------------------------------------------------------------------ */
 /* MAIN */
+
 .main {
 	display: flex;
 	gap: 200px;
 	margin-top: -780px;
 }
 
+/* ------------------------------------------------------------------------ */
 /* ASIDE */
+
 .main__aside {
 	position: relative;
 	width: 390px;
@@ -609,8 +634,6 @@ ul {
 .aside__heading {
 	position: relative;
 	font-size: 3rem;
-	text-transform: uppercase;
-	font-family: "GilroyExtraBold", serif;
 }
 
 .aside__heading::after {
@@ -629,14 +652,13 @@ ul {
 }
 
 .main__aside__list__element {
-	margin: 16px 0;
+	margin: 1.6rem 0;
 }
 
 .main__aside__list__link {
 	font-size: 2rem;
+	/* LINK LIGHT */
 	font-family: GilroyLight, sans-serif;
-	text-decoration: none;
-	color: #000;
 }
 
 /* SIGNS IN ASIDE */
@@ -690,8 +712,8 @@ ul {
 	z-index: -1;
 }
 
-/* MAIN CONTENT */
-/* PROMOTIONS */
+/* ------------------------------------------------------------------------ */
+/* MAIN PROMOTIONS */
 
 .main__content {
 	position: relative;
@@ -703,9 +725,7 @@ ul {
 	margin-top: 1rem;
 	margin-bottom: 4.5rem;
 	font-size: 4.5rem;
-	font-family: GilroyExtraBold, sans-serif;
 	color: #fff;
-	text-transform: uppercase;
 	text-align: center;
 }
 
@@ -715,6 +735,7 @@ ul {
 	justify-content: space-between;
 }
 
+/* ------------------------------------------------------------------------ */
 /* PRODUCTS */
 .main__content__products-box {
 	display: flex;
@@ -754,7 +775,6 @@ ul {
 	border-radius: 9px;
 	color: #000;
 	font-family: GilroyExtraBold, sans-serif;
-	text-decoration: none;
 	box-shadow: 0px 0px 10px #00000021;
 	cursor: pointer;
 }
@@ -766,13 +786,6 @@ ul {
 	text-align: center;
 }
 
-.card__img {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
 .card__price {
 	position: absolute;
 	right: -23px;
@@ -780,9 +793,6 @@ ul {
 	width: 100px;
 	height: 100px;
 	padding: 1.5rem;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	color: #fff;
 	font-size: 2rem;
 	text-align: center;
@@ -795,10 +805,10 @@ ul {
 	bottom: -23px;
 	right: -40px;
 }
-
+/* ------------------------------------------------------------------------ */
 /* SIGNS IN MAIN */
-/* TOP RIGHT IN MAIN */
 
+/* TOP RIGHT IN MAIN */
 .main__content__signs--top-right {
 	top: 290px;
 	right: -480px;
@@ -820,7 +830,6 @@ ul {
 }
 
 /* CIRCLES IN MAIN */
-
 .main__content__circle-black {
 	width: 374px;
 	height: 374px;
@@ -828,6 +837,7 @@ ul {
 	right: -230px;
 }
 
+/* ------------------------------------------------------------------------ */
 /* CONTACT */
 .section__contact {
 	margin-top: -25px;
@@ -836,8 +846,6 @@ ul {
 .section__heading {
 	position: relative;
 	font-size: 4.5rem;
-	font-family: GilroyExtraBoldrif, sans-serif;
-	text-transform: uppercase;
 }
 
 .section__heading::after {
@@ -858,23 +866,12 @@ ul {
 }
 
 .section__contact__logo-esc {
-	position: absolute;
 	width: 218px;
 	height: 218px;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	border-radius: 50%;
 	background-color: rgba(255, 255, 255, 0.71);
 	backdrop-filter: blur(9px);
 	-webkit-backdrop-filter: blur(9px);
-}
-
-.section__contact__logo-esc-img {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 }
 
 /* CONTACT DATA */
@@ -942,6 +939,175 @@ ul {
 	top: -185px;
 	right: -110px;
 	z-index: -1;
+}
+
+/* ------------------------------------------------------------------------ */
+/* ABOUT SECTION */
+
+.about {
+	position: relative;
+	margin-top: -2rem;
+}
+
+.about__text__box {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
+}
+
+.about__text {
+	width: 1498px;
+	font-size: 2rem;
+	font-family: GilroyLight, sans-serif;
+}
+
+.about__text strong {
+	font-family: GilroyExtraBold, sans-serif;
+}
+
+.about__text a {
+	text-decoration: underline;
+}
+
+/* ------------------------------------------------------------------------ */
+/* SECTION LOGOS */
+
+.logos {
+	position: relative;
+	margin-bottom: 6rem;
+}
+
+.logos__box {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.logos__circle-transparent-black {
+	left: 1720px;
+	bottom: -565px;
+	z-index: 4;
+}
+
+/* SIGNS IN LOGOS SECTION */
+
+.logos__sings {
+	right: -310px;
+	top: -610px;
+}
+
+.logos__sings .sign__icon {
+	width: 193px;
+}
+
+.logos__sings .sum {
+	grid-column: 2/3;
+	grid-row: 2/3;
+}
+
+/* ------------------------------------------------------------------------ */
+/* FOOTER */
+.footer {
+	position: relative;
+	margin-top: -100px;
+	overflow: hidden;
+}
+
+.footer__circle {
+	width: 492px;
+	height: 492px;
+}
+.footer__circle-left {
+	top: 212px;
+	left: -212px;
+}
+
+.footer__circle-right {
+	right: -110px;
+	top: 310px;
+}
+
+.footer__circle-transparent-white {
+	width: 495px;
+	height: 492px;
+	left: -109px;
+	top: 168px;
+}
+
+.footer__circle-transparent-black {
+	left: 1740px;
+	bottom: -40px;
+	z-index: 4;
+}
+
+.footer-bg {
+	position: absolute;
+	top: 70px;
+	left: 48%;
+	width: 2050px;
+	height: 681px;
+	transform: translateX(-50%);
+	background: #c4ecfc;
+	border-radius: 50%;
+	z-index: -1;
+}
+
+.footer__content {
+	gap: 150px;
+	margin: 15rem auto 6rem auto;
+}
+
+.footer__contact__list {
+	margin-left: 6rem;
+	font-family: GilroyLight, sans-serif;
+	font-size: 1.8rem;
+}
+
+.footer__contact__list-item {
+	position: relative;
+	margin-top: 3rem;
+	margin: 3rem 0;
+}
+
+.footer__contact__list-item::before {
+	position: absolute;
+	top: 50%;
+	left: -60px;
+	transform: translateY(-50%);
+	width: 45px;
+}
+
+.footer__contact__list-item:nth-child(1)::before {
+	content: url("/img/amk.png");
+}
+
+.footer__contact__list-item:nth-child(2)::before {
+	content: url("/img/ana.png");
+}
+
+.footer__contact__list-item:nth-child(3)::before {
+	content: url("/img/amg.png");
+}
+
+.footer__contact__list-item:nth-child(4)::before {
+	content: url("/img/amm.png");
+}
+
+.footer__contact__list-item:nth-child(5)::before {
+	content: url("/img/amo.png");
+}
+
+.footer__contact__list-item:nth-child(5) .footer__contact__phone {
+	font-family: GilroyExtraBold, sans-serif;
+	color: #d43216;
+}
+
+.footer__contact__text {
+	margin: 5px 0;
+}
+
+.footer__contact__phone {
+	display: block;
+	margin: 5px 0;
 }
 
 /* ANIMATIONS */
